GNOME Bugzilla – Bug 693360
cogl-pango: Fix some doc/introspection comments
Last modified: 2013-02-07 22:10:32 UTC
See patch.
Created attachment 235448 [details] [review] cogl-pango: Fix some doc/introspection comments
Comment on attachment 235448 [details] [review] cogl-pango: Fix some doc/introspection comments this looks good to land to me: Reviewed-by: Robert Bragg <robert@linux.intel.com> thanks
Attachment 235448 [details] pushed as 1ea8ee5 - cogl-pango: Fix some doc/introspection comments