cogl-pango: Fix some doc/introspection comments

https://bugzilla.gnome.org/show_bug.cgi?id=693360